2005-09-27  Roger Leigh  <rleigh@debian.org>

	* Update documentation.

	* schroot/sbuild-config.c (sbuild_config_load): Acquire a read
	lock while reading schroot.conf.

	* schroot/schroot.h: Add sbuild-lock.h.

	* schroot/Makefile.am: Add sbuild-lock.[ch].

	* schroot/sbuild-lock.[ch]: New file, implementing simple
	whole-file advisory locking primitives.

2005-09-25  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/00check: Remove "session-start" check.

	* schroot/session/00check: Remove duplicate "session-start" check.

	* schroot/session/50sbuild: New script to set up sbuild build
	directory and fix its ownership and permissions.

2005-09-25  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Document new session.d directory.

	* schroot/schroot.conf.5.in: Document run-setup-scripts and
	run-session-scripts options.

	* schroot/sbuild-chroot.c (sbuild_chroot_class_init): Replace
	run-setup property and associated accessors with two new
	properties, run-setup-scripts and run-session-scripts and
	associated accessors.  Setup script are not run by default,
	whereas session scripts are.

	* schroot/sbuild-chroot.h (struct _SbuildChroot): Replace
	run_setup with two members, run_setup_scripts and
	run_session_scripts.

	* schroot/Makefile.am (SUBDIRS): Add session.

	* schroot/session/00check: New session script.

	* schroot/session/Makefile.am: New file for installing session
	scripts.

	* configure.ac (SCHROOT_CONF_SETUP_D): New define and substitution
	variable.

2005-09-25  Roger Leigh  <rleigh@debian.org>

	* Update API reference.

	* schroot/schroot.1.in: Document new command-line options.

	* schroot/schroot.c: Add new session_opt struct, with operation,
	id and force members.
	(parse_options): Add new command line options: -b/--begin-session,
	-r/--run-session, -e/--end-session and --force in a new "session"
	option group.  These options do not currently have any effect.
	(parse_session_options): New helper function to parse session
	options.