@@ -1,38 +1,64 @@
 TODO
 ----
 
-* Add the session UUID to the environment and update documentation.
+* The session names should not be restricted to a UUID.  For automatic
+  session locking, it should also allow block device and inode lock
+  names.
+
+* Add the session name to the environment and update documentation.
 
 * chroot access should be restricted to a certain number of
   concurrent users (defaulting to 1).  This could be implemented
   with POSIX semaphores using sem_open()/sem_trywait()/sem_close().
 
-  - Semaphores are not the right structure.  Use simple file locks
-    opened with O_CREAT|O_EXCL to control access to the session
-    config.  Maintain the user count in the session config.  Locks to
-    control block device access are still needed.
-
   Chroot creation
   ---------------
 
-  - Create a lock on the source blockdev or directory using a semaphore:
+  - Create a lock on the source blockdev or directory using an
+    exclusive lock:
     /schroot-block-major-minor or /schroot-directory-major-minor-inode
-  - run chroot setup scripts
-  - unlock the semaphore
+
+  - create file with O_WRONLY|O_CREAT|O_EXCL
+  - acquire exclusive write lock
+  - run setup scripts [start]
+  - write session file
+  - unlock
 
   Session run
   -----------
 
-  Create a lock on the chroot directory using a semaphore.  This is of the form
+  Create a lock on the chroot directory using a read and then write
+  lock.  This is of the form
   /schroot-directory-major-minor-inode, and is used to track the usage
   count of the chroot.  For PVs and devices, use
   /schroot-block-major-minor.
 
+  - open file with O_RDWR
+
+  - acquire exclusive write lock
+  - read session file
+  - truncate and write session file
+  - unlock
+
+  - run session scripts [start]
+  - run session
+  - run session scripts [stop]
+
+  - acquire exclusive write lock
+  - read session file
+  - truncate and write session file
+  - unlock
+
   Chroot teardown
   ---------------
 
-  Re-acquire the chroot lock.
-
+  - open O_RDWR
+  - acquire exclusive write lock
+  - read session file
+  - run setup scripts [stop]
+  - unlink
+  - unlock
+  - close
 
 * Add a SbuildChrootXen chroot type for Xen hosts.
 
